removed location table, would be good but adds unnecessary complexity
